--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- video element -->
     <video id="video" width="600" height="450" autoplay muted playsinline>
 </body>
 </html>
