--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Face detection on the browser using javascript !</title>
+  <title>THE SECRECT TO HAPPINESS</title>
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- video element -->
-    <video id="video" width="600" height="450" autoplay muted playsinline>
+   <img src="assets/track.svg" alt="track" class="track">
+   <img src="assets/trolley.svg" alt="Trolley" class="trolley">
 </body>
 </html>
