Implemented rolly and rail

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <!-- video element -->
    <img src="assets/track.svg" alt="track" class="track">
    <img src="assets/trolley.svg" alt="Trolley" class="trolley">
-</body>
+
 </html>
+
+   <video id="video" width="600" height="450" autoplay muted playsinline></video>
