added smile now

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="smile-text">SMILE NOW</div>
   <!-- video element -->
    <img src="assets/track.svg" alt="track" class="track">
    <img src="assets/trolley.svg" alt="Trolley" class="trolley">
-
-</html>
-
    <video id="video" width="600" height="450" autoplay muted playsinline></video>
+</body>
+</html>
