--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- video element -->
    <img src="assets/track.svg" alt="track" class="track">
    <img src="assets/trolley.svg" alt="Trolley" class="trolley">
+   <img src="assets/two-guys.png" alt="Two Guys" class="two-guys">
    <video id="video" width="600" height="450" autoplay muted playsinline></video>
 </body>
 </html>
