--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="smile-text">SMILE NOW</div>
+  <div class="smile-text">SMILE NOW!!</div>
   <!-- video element -->
    <img src="assets/track.svg" alt="track" class="track">
    <img src="assets/trolley.svg" alt="Trolley" class="trolley">
    <img src="assets/two-guys.png" alt="Two Guys" class="two-guys">
+   <img src="assets/kind-lever.png" alt="Kind Lever" class="lever kind-lever" id="kind-lever">
+   <img src="assets/evil-lever.png" alt="Evil Lever" class="lever evil-lever" id="evil-lever">
    <video id="video" width="600" height="450" autoplay muted playsinline></video>
 </body>
 </html>
